src/test/deca/context/valid/without_class/float_var_declaration.deca
// Description:
//    Test float declaration
//
// Result:
//    
//
// Historique:
//    cree le 12/01/2023
{
    float x = 3/4;
}